--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,12 @@
     margin: 0;
     padding: 0;
 }
-
+a{
+    text-decoration: none;
+}
+ul{
+    list-style: none;
+}
 .debug{
     border: 1px solid red;
 }
@@ -14,11 +19,14 @@
 	--color-primary: #141922;
 	--color-sidebar: #000000;
 	--color-toolbar: #282828;
-	--color-secondary: #d2d2d2;
+	--color-secondary: #7D7F84;
 	--color-white: #ffffff;
     --color-green: #adff2f;
 }
-
+/* general */
+body{
+    font-family: "Montserrat", sans-serif;
+}
 
 .wrapper{
     height: 100vh;
@@ -42,23 +50,94 @@
     /* flex-shrink: 0; */
 }
 
-main{
-    width: calc(100% - 250px);
-    /* flex-grow: 1; */
-    padding: 100px 20px 20px 20px;
-
-    overflow-y: auto;
+h2{
+    margin-bottom: 23px;
+}
+/* UTILITY */
+.btn{
+    border: 2px var(--color-white) solid;
+    border-radius: 25px;
+    padding: 10px 20px;
+    text-transform: uppercase;
+    color: var(--color-white)
 }
 
-.header{
-    background-color: #1a1a1a4f;
-    height: 80px;
-    position: fixed;
-    top: 0;
-    left: 250px;
-    width: calc(100% - 250px);
-}
+
 /* flex utility */
 .d-flex{
     display: flex;
 }
+
+.just-center{
+    justify-content: center;
+}
+
+.align-center{
+    align-items: center;
+    align-content: center;
+}
+
+/* header */
+.header{
+    background-color: #1a1a1a4f;
+    color: var(--color-white);
+    height: 80px;
+    position: fixed;
+    top: 0;
+    left: 250px;
+    z-index: 1000;
+    width: calc(100% - 250px);
+    padding: 20px 5px 30px 5px;
+    justify-content: end;
+    align-items: center;    
+}
+/* main */
+main{
+    width: calc(100% - 250px);
+    /* flex-grow: 1; */
+    padding: 100px 20px 20px 20px;
+    color: var(--color-white);
+    overflow-y: auto;
+}
+img{
+    width: 100%;
+    display: block;
+}
+    /* nav-bar */
+nav{ 
+    margin-bottom:20px;
+}
+nav a{
+    color: var(--color-secondary);
+    font-weight: 500;
+    
+}
+nav ul a{
+    text-transform: uppercase;
+    margin: 13px;
+}
+
+/* section recent */
+#recent h2{
+
+}
+.card{
+    width: calc(100% / 6);
+}
+
+.card-title{
+    text-align: center;
+}
+
+.card-title>*{
+    margin: 10px;
+}
+
+dd{
+    color: var(--color-secondary);
+}
+
+
+
+
+/* media query */
