--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,7 @@ body{
 
 h2{
     margin-bottom: 23px;
+    font-size: 2em;
 }
 /* UTILITY */
 .btn{
@@ -125,6 +126,17 @@ nav ul a{
     width: calc(100% / 6);
 }
 
+.img-hover{
+    text-align: center;
+    position: absolute;
+    /* display: none; */
+}
+.absolute{
+    position: absolute;
+}
+.card-img{
+    position: relative;
+}
 .card-title{
     text-align: center;
 }
