--- a/css/style.css
+++ b/css/style.css
@@ -129,11 +129,13 @@ nav ul a{
 .img-hover{
     text-align: center;
     position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50% , -50%);
+    font-size: 5em;
     /* display: none; */
 }
-.absolute{
-    position: absolute;
-}
+
 .card-img{
     position: relative;
 }
