--- a/css/style.css
+++ b/css/style.css
@@ -1,61 +1,68 @@
 /* reset */
-*{
+* {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
-a{
+
+a {
     text-decoration: none;
 }
-ul{
+
+ul {
     list-style: none;
 }
-.debug{
+
+.debug {
     border: 1px solid red;
 }
 
 /* color */
 :root {
-	--color-primary: #141922;
-	--color-sidebar: #000000;
-	--color-toolbar: #282828;
-	--color-secondary: #7D7F84;
-	--color-white: #ffffff;
+    --color-primary: #141922;
+    --color-sidebar: #000000;
+    --color-toolbar: #282828;
+    --color-secondary: #7D7F84;
+    --color-white: #ffffff;
     --color-green: #adff2f;
 }
+
 /* general */
-body{
+body {
     font-family: "Montserrat", sans-serif;
 }
 
-.wrapper{
+.wrapper {
     height: 100vh;
     background-color: var(--color-primary);
     /* overflow: hidden; */
 }
-#toolbar
-{
+
+#toolbar {
     background-color: var(--color-toolbar);
     height: 100px;
 }
-.content{
+
+.content {
     height: calc(100vh - 100px);
     width: 100%;
     background-color: ;
 }
-#sidebar{
+
+#sidebar {
     background-color: var(--color-sidebar);
     width: 250px;
     height: 100%;
     /* flex-shrink: 0; */
 }
 
-h2{
+h2 {
     margin-bottom: 23px;
     font-size: 2em;
 }
+
 /* UTILITY */
-.btn{
+.btn {
     border: 2px var(--color-white) solid;
     border-radius: 25px;
     padding: 10px 20px;
@@ -65,21 +72,21 @@ h2{
 
 
 /* flex utility */
-.d-flex{
+.d-flex {
     display: flex;
 }
 
-.just-center{
+.just-center {
     justify-content: center;
 }
 
-.align-center{
+.align-center {
     align-items: center;
     align-content: center;
 }
 
 /* header */
-.header{
+.header {
     background-color: #1a1a1a4f;
     color: var(--color-white);
     height: 80px;
@@ -90,75 +97,84 @@ h2{
     width: calc(100% - 250px);
     padding: 20px 5px 30px 5px;
     justify-content: end;
-    align-items: center;    
+    align-items: center;
 }
+
 /* main */
-main{
+main {
     width: calc(100% - 250px);
     /* flex-grow: 1; */
     padding: 100px 20px 20px 20px;
     color: var(--color-white);
     overflow-y: auto;
 }
-img{
+
+img {
     width: 100%;
     display: block;
 }
-    /* nav-bar */
-nav{ 
-    margin-bottom:20px;
+
+/* nav-bar */
+nav {
+    margin-bottom: 20px;
 }
-nav a{
+
+nav a {
     color: var(--color-secondary);
     font-weight: 500;
-    
 }
-nav ul a{
+
+nav a:hover{
+    color: var(--color-white);
+}
+
+nav ul a {
     text-transform: uppercase;
     margin: 13px;
 }
 
 /* section recent */
-#recent h2{
+#recent h2 {}
 
-}
-.card{
+.card {
     width: calc(100% / 6);
 }
-.card-img{
+
+.card-img {
     position: relative;
 }
 
-.card-img:hover .opacity{
+.card-img:hover .opacity {
     display: block;
 }
 
-.img-hover{
+.img-hover {
     text-align: center;
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50% , -50%);
+    transform: translate(-50%, -50%);
     font-size: 5em;
     display: none;
 }
 
-.card-img:hover .img-hover{
+.card-img:hover .img-hover {
     display: block;
 }
-.card-img img:hover{
+
+.card-img img:hover {
     opacity: 0.5;
 }
 
-.card-title{
+.card-title {
     text-align: center;
 }
 
-.card-title>*{
+.card-title>* {
     margin: 10px;
 }
 
-dd{
+#recent p {
     color: var(--color-secondary);
 }
 
