--- a/css/style.css
+++ b/css/style.css
@@ -134,7 +134,10 @@ nav ul a {
 }
 
 /* section recent */
-#recent h2 {}
+
+.row{
+    gap: 15px;
+}
 
 .card {
     width: calc(100% / 6);
@@ -149,6 +152,8 @@ nav ul a {
 }
 
 .img-hover {
+    width: 100%;
+    height: 100%;
     text-align: center;
     position: absolute;
     top: 50%;
@@ -162,8 +167,8 @@ nav ul a {
     display: block;
 }
 
-.card-img img:hover {
-    opacity: 0.5;
+.img-hover:hover {
+    background-color: #000000d1;
 }
 
 .card-title {
