--- a/css/style.css
+++ b/css/style.css
@@ -130,7 +130,7 @@ nav a:hover{
 
 nav ul a {
     text-transform: uppercase;
-    margin: 13px;
+    padding: 13px 15px;
 }
 
 /* section  */
@@ -155,6 +155,7 @@ nav ul a {
 }
 
 .img-hover {
+    line-height: 2;
     width: 100%;
     height: 100%;
     text-align: center;
@@ -171,7 +172,7 @@ nav ul a {
 }
 
 .img-hover:hover {
-    background-color: #000000d1;
+    background-color: #0000009f;
 }
 
 .card-title {
@@ -202,4 +203,58 @@ nav ul a {
     margin-bottom: 10px;
 }
 
+#popular img{
+    width: 100%;
+    aspect-ratio: 1 / 1;
+    border-radius: 100%;
+    overflow: hidden;
+}
+.img-hover-rounded {
+    line-height: 2;
+    border-radius: 50%;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 5em;
+    display: none;
+}
+
+.card-img:hover .img-hover-rounded {
+    display: block;
+}
+
+.img-hover-rounded:hover {
+    background-color: #000000d1;
+}
 /* media query */
+
+@media screen and (max-width: 1200px){
+    nav ul{
+        flex-wrap: wrap;
+    }
+    nav ul li{
+        padding: 13px 15px;
+    }
+    .row{
+        flex-wrap: wrap;
+    }
+    .card{
+        width: calc(100% / 4 - 20px);
+    }
+}
+
+@media screen and (max-width: 992px){
+    .card{
+        width: calc(100% / 2 - 20px);
+    }
+}
+
+@media screen and (max-width: 768px){
+    .card{
+        width: calc(100% - 20px);
+    }
+}
