--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,6 @@ body {
 .content {
     height: calc(100vh - 100px);
     width: 100%;
-    background-color: ;
 }
 
 #sidebar {
@@ -150,15 +149,7 @@ nav ul a {
     position: relative;
 }
 
-.card-img:hover .opacity {
-    display: block;
-}
-
-.img-hover {
-    line-height: 2;
-    width: 100%;
-    height: 100%;
-    text-align: center;
+.icon {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -167,12 +158,12 @@ nav ul a {
     display: none;
 }
 
-.card-img:hover .img-hover {
+.card-img:hover .icon {
     display: block;
 }
 
-.img-hover:hover {
-    background-color: #0000009f;
+.card-img:hover img{
+    opacity: 0.5;
 }
 
 .card-title {
@@ -209,12 +200,7 @@ nav ul a {
     border-radius: 100%;
     overflow: hidden;
 }
-.img-hover-rounded {
-    line-height: 2;
-    border-radius: 50%;
-    width: 100%;
-    height: 100%;
-    text-align: center;
+.icon-rounded {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -223,13 +209,10 @@ nav ul a {
     display: none;
 }
 
-.card-img:hover .img-hover-rounded {
+.card-img:hover .icon-rounded {
     display: block;
 }
 
-.img-hover-rounded:hover {
-    background-color: #000000d1;
-}
 /* media query */
 
 @media screen and (max-width: 1200px){
