--- a/css/style.css
+++ b/css/style.css
@@ -41,20 +41,14 @@ body {
 
 #toolbar {
     background-color: var(--color-toolbar);
-    height: 100px;
+    height: 70px;
 }
 
 .content {
-    height: calc(100vh - 100px);
+    height: calc(100vh - 70px);
     width: 100%;
 }
 
-#sidebar {
-    background-color: var(--color-sidebar);
-    width: 200px;
-    height: 100%;
-    /* flex-shrink: 0; */
-}
 
 h2 {
     margin-bottom: 23px;
@@ -149,13 +143,19 @@ nav ul a {
 
 /* sidebar */
 #sidebar {
+    background-color: var(--color-sidebar);
     color: var(--color-secondary);
-    padding: 10px;
+    width: 200px;
+    height: 100%;
+    /* flex-shrink: 0; */
 }
+
 
 .logo-side {
     width: 70%;
     margin-bottom: 20px;
+    padding-left: 10px;
+    padding-top: 10px;
 }
 
 .icon-side {
@@ -171,13 +171,17 @@ nav ul a {
     align-items: center;
 }
 
-.first-list ul li a {
+.list-top{
+    padding-left: 5px;
+}
+
+.list-top ul li a {
     border-left: 3px solid rgba(0, 0, 0, 0);
-    margin-bottom: 10px;
+    margin-bottom: 5px;
     font-weight: 600;
 }
 
-.first-list ul li:hover {
+.list-top ul li:hover {
     border-left: 3px solid var(--color-green);
 }
 
@@ -186,22 +190,65 @@ nav ul a {
 }
 
 #sidebar ul img {
-    width: 30px;
+    width: 20px;
+}
+
+.playlist{
+    padding-left: 10px;
 }
 
 .playlist h4 {
     text-transform: uppercase;
     color: var(--color-white);
-    margin-top: 10px;
+    margin-top: 5px;
 }
 
 .playlist i {
-    font-size: 2.5em;
+    font-size: 2em;
     padding-right: 5px;
 }
 
 .playlist ul li{
     margin-bottom: 5px;
+}
+
+.bottom-side img {
+    width: 13px;
+    /* color: var(--color-secondary); */
+    
+}
+
+.bottom-side a {
+    color: var(--color-secondary);
+    margin-left: 5px;
+}
+
+.bord {
+    border-bottom: 1px solid var(--color-secondary);
+    margin: 10px 10px;
+    padding: 6px 0;
+}
+
+
+.profile{
+    padding-left: 10px;
+    padding-bottom: 5px;
+    display: flex;
+    align-items: center;
+}
+
+.square{
+    width: 18px;
+    height: 18px;
+    background-color: var(--color-secondary);
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+}
+.profile h5{
+    color: var(--color-white);
+    font-size: 1.2em;
+    margin-left: 5px;
 }
 
 /* section  */
