--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,6 @@ img {
     width: 100%;
 }
 
-
 h2 {
     margin-bottom: 23px;
     font-size: 2em;
@@ -71,7 +70,6 @@ h2 {
     color: var(--color-white);
     transition: transform .3s;
 }
-
 
 /* flex utility */
 .d-flex {
@@ -119,17 +117,26 @@ h2 {
 }
 
 /* nav-bar */
-nav {
-    /* margin-bottom: 20px; */
-}
-
 nav a {
     color: var(--color-secondary);
     font-weight: 500;
 }
 
+nav a:after{
+    content: '';
+    display: block;
+    height: 3px;
+    width: 40px;
+    margin: 0 auto;
+    background-color: transparent;
+}
+
 nav a:hover {
     color: var(--color-white);
+}
+
+nav a:hover:after{
+    background-color: var(--color-green);
 }
 
 nav ul li a {
@@ -369,7 +376,7 @@ nav ul li a {
 
 .tool-left {
     align-items: center;
-    gap: 2em;
+    gap: 0.8em;
     width: 25%;
 }
 
@@ -377,7 +384,7 @@ nav ul li a {
     width: 80px;
 }
 
-.tool-left h5{
+.tool-left .in-play{
     font-size: 1.3em;
 }
 
@@ -385,10 +392,11 @@ nav ul li a {
     color: var(--color-secondary);
 }
 
+
 .tool-left i{
     color: var(--color-secondary);
     font-size: 1.5em;
-    /* padding: 0 8px; */
+    padding: 0 5px;
 }
 
 .tool-left i:hover{
@@ -472,7 +480,11 @@ nav ul li a {
 
     .tool-left{
         gap: 1em;
-    } 
+    }
+
+    .tool-left .in-play{
+        font-size: 0.9em;
+    }
 
     .tool-left-icon{
         flex-wrap: wrap;
@@ -560,6 +572,10 @@ nav ul li a {
         width: 40%;
     }
 
+    .tool-top-center {
+        gap: 0.7em;
+    }
+
     .bar{
         width: 60%;
     }
@@ -571,8 +587,16 @@ nav ul li a {
         width: calc(100% - 20px);
     }
 
+    .tool-left img{
+        width: 60px;
+    }
+
     .tool-top-center{
-        gap: 1em;
+        gap: 0.7em;
+    }
+
+    .mini-bar{
+        display: none;
     }
 
 }
