--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,7 @@ body {
 .wrapper {
     height: 100vh;
     background-color: var(--color-primary);
-    min-width: 550px;
+    min-width: 500px;
 }
 
 main {
@@ -291,6 +291,7 @@ nav ul li a {
 
 .card {
     width: calc(100% / 6);
+    cursor: pointer;
 }
 
 .card-img {
@@ -374,6 +375,10 @@ nav ul li a {
     color: var(--color-white);
 }
 
+#toolbar i{
+    cursor: pointer;
+}
+
 .tool-left {
     align-items: center;
     gap: 0.8em;
@@ -388,10 +393,13 @@ nav ul li a {
     font-size: 1.3em;
 }
 
+.tool-left p{
+    font-size: 0.7em;
+}
+
 .tool-left span, p{
     color: var(--color-secondary);
 }
-
 
 .tool-left i{
     color: var(--color-secondary);
@@ -433,6 +441,7 @@ nav ul li a {
 .bar{
     width: 80%;
     border-bottom: 3px solid var(--color-secondary);
+    border-radius: 30px;
     align-self: center;
 }
 
@@ -450,6 +459,7 @@ nav ul li a {
 .mini-bar{
     width: 100px;
     border-bottom: 3px solid var(--color-secondary);
+    border-radius: 30px;
     align-self: center;
 }
 /* media query */
@@ -552,7 +562,7 @@ nav ul li a {
     }
 
     main {
-        flex-grow: 1;
+       width: calc(100% - 50px);
     }
 
     .header {
@@ -564,6 +574,10 @@ nav ul li a {
         font-size: 1.3em;
     }
 
+    .tool-left{
+        gap: 0.6em;
+    }
+
     .tool-top-center i{
         font-size: 1.5em;
     }
@@ -573,7 +587,7 @@ nav ul li a {
     }
 
     .tool-top-center {
-        gap: 0.7em;
+        gap: 1.3em;
     }
 
     .bar{
