--- a/css/style.css
+++ b/css/style.css
@@ -547,7 +547,7 @@ flex-grow: 2;
     position: relative;
     display: none;
     left: 30%;
-    bottom: 9px;
+    bottom: 10px;
     width: 15px;
     height: 15px;
     background-color: var(--color-white);
@@ -701,21 +701,9 @@ flex-grow: 2;
     }
 
     .tool-right{
-        flex-wrap: wrap;
-    }
-
-    .tool-right .volume{
-        display: none;
-    }
-    
-    .tool-right:hover .volume{
-        display: inline-block;
-        transform: rotate(-90deg);
         position: relative;
-        
-
-        /* width: 200px; */
     }
+
 }
 
 @media screen and (max-width: 550px) {
@@ -727,6 +715,23 @@ flex-grow: 2;
         width: 60px;
     }
 
+    .tool-right{
+        justify-content: center;
+    }
+
+    .tool-right .volume{
+        opacity: 0;
+        width:0px;
+    }
+    
+    .tool-right:hover .volume{
+       opacity: 1;
+        transform: rotate(-90deg);
+        position: absolute;
+        left: 55px;
+        bottom: 75px;
+        width: 100px;
+    }
 }
 
 @media screen and (max-height: 200px){
