--- a/css/style.css
+++ b/css/style.css
@@ -725,12 +725,11 @@ flex-grow: 2;
     }
     
     .tool-right:hover .volume{
-       opacity: 1;
-        transform: rotate(-90deg);
+        opacity: 1;
+        /* transform: rotate(-180deg); */
         position: absolute;
-        left: 55px;
-        bottom: 75px;
-        width: 100px;
+        top: 46px;
+        width: 80%;
     }
 }
 
